Sections header and hero  ready

--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,90 @@
     <div class="content-wrap">
       <header class="header">
         <div class="container">
-          <div class="header__content"></div>
+          <div class="header__content">
+            <div class="grid grid_xl-indent-outer">
+              <div class="grid__item grid__item_xl-indent-inner width-1-1 width-1-4-lg width-1-4-xl">
+                <div class="logo"><a class="logo__link" href="/"><span class="logo__icon icon-logo-agency"></span><span class="logo__box-text"><span class="logo__txt">Агентство</span><span class="logo__txt">по банкротству</span></span></a></div>
+              </div>
+              <div class="grid__item grid__item_xl-indent-inner width-1-1 width-1-2-sm width-1-3-md width-1-4-lg">
+                <div class="header__box-link header__box-link_position_right header__box-link_indent-inner_left"><a class="header__link" href="#map"><span class="header__icon icon-marker"></span><span class="header__txt header__txt_font_sans-serif header__txt_font_bold header__txt_position_bottom">Архангельск</span></a></div>
+              </div>
+              <div class="grid__item grid__item_xl-indent-inner width-1-1 width-1-2-sm width-1-3-md width-1-4-lg width-1-3-xl">
+                <div class="header__box-link header__box-link_position_left"><a class="header__link" href="tel:88182635000"><span class="header__txt header__txt_big header__txt_animation-color">+8 (818) 263-50-00</span></a></div>
+              </div>
+              <div class="grid__item grid__item_xl-indent-inner width-1-1 width-1-3-md width-1-4-lg width-1-6-xl">
+                <div class="header__box-button">
+                  <button class="button button_small animated wobble delay-2s" id="btnOpenModal"><span class="button__txt button__txt_small">Заказать звонок</span></button>
+                </div>
+              </div>
+            </div>
+            <div class="header__modal"></div>
+          </div>
         </div>
       </header>
+      <section class="section section-hero">
+        <div class="section-hero__content-top section-hero__content-top_figure-triangle">
+          <div class="container">
+            <div class="section-hero__box-content-text">
+              <h1 class="section-hero__heading">Банкротство<span class="section-hero__heading section-hero__heading_position"> физических лиц</span></h1><span class="section-hero__subtitle">в г. Архангельск</span>
+            </div>
+          </div>
+        </div>
+        <div class="section-hero__content-bottom js-arrow-down js-arrow-down_md-off">
+          <div class="section__background"><img class="section__picture" src="img/bg-hero.jpg" alt="background"></div>
+          <div class="section__foreground">
+            <div class="container">
+              <div class="section-hero__box-content">
+                <div class="section-hero__box-figure">
+                  <figure class="section-hero__figure wow slideInLeft" data-wow-offset="150"><img class="section-hero__picture" src="img/man.png" alt="man"></figure>
+                </div>
+                <div class="section-hero__box-slider">
+                  <div class="slider-hero">
+                    <div class="swiper-container" id="swiperContainerSliderHero">
+                      <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                          <div class="slider-hero__content">
+                            <div class="slider-hero__content-top"><span class="slider-hero__txt slider-hero__txt_position">Самые лучшие</span><span class="slider-hero__txt">эксперты!</span></div>
+                            <div class="slider-hero__content-bottom">
+                              <div class="slider-hero__box-button"><a class="button button_middle" href="#"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="slider-hero__content">
+                            <div class="slider-hero__content-top"><span class="slider-hero__txt slider-hero__txt_position">Помощь с</span><span class="slider-hero__txt">документами!</span></div>
+                            <div class="slider-hero__content-bottom">
+                              <div class="slider-hero__box-button"><a class="button button_middle" href="#"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="slider-hero__content">
+                            <div class="slider-hero__content-top"><span class="slider-hero__txt slider-hero__txt_position">Избавьтесь от долгов</span><span class="slider-hero__txt">совершенно легально!</span></div>
+                            <div class="slider-hero__content-bottom">
+                              <div class="slider-hero__box-button"><a class="button button_middle" href="#"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="slider-hero__control-panel">
+                      <div class="button-arrow button-arrow_bold button-arrow_position button-arrow_position_right icon-arrow-big-right slider-hero-button-next"></div>
+                      <div class="button-arrow button-arrow_bold button-arrow_position button-arrow_position_left icon-arrow-big-left slider-hero-button-prev"></div>
+                    </div>
+                    <div class="slider-hero__box-pagination">
+                      <div class="swiper-pagination"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="section-hero__box-figure section-hero__box-figure_hide section-hero__box-figure_visible section-hero__box-figure_position animated slideInRight">
+                  <figure class="section-hero__figure section-hero__figure_size js-animation-start"><img class="section-hero__picture" src="img/calc.png" alt="calc"></figure>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
     <script src="libs/libs-min.js"></script>
     <script src="js/common-min.js"></script>
