hero section has been finalized and the finance section is ready

--- a/app/index.html
+++ b/app/index.html
@@ -100,14 +100,67 @@
                     </div>
                   </div>
                 </div>
-                <div class="section-hero__box-figure section-hero__box-figure_hide section-hero__box-figure_visible section-hero__box-figure_position animated slideInRight">
-                  <figure class="section-hero__figure section-hero__figure_size js-animation-start"><img class="section-hero__picture" src="img/calc.png" alt="calc"></figure>
+                <div class="section-hero__wrap">
+                  <div class="section-hero__box-figure section-hero__box-figure_hide section-hero__box-figure_visible section-hero__box-figure_position animated slideInRight">
+                    <figure class="section-hero__figure section-hero__figure_size"><img class="section-hero__picture" src="img/calc.png" alt="calc"></figure>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <main class="main">
+        <section class="section section-finance">
+          <div class="container">
+            <div class="section-finance__box-content">
+              <div class="grid">
+                <div class="grid__item width-1-1 width-1-2-lg">
+                  <div class="section-finance__box-text">
+                    <h2 class="section-finance__heading">Попали в тяжелое<span class="section-finance__heading section-finance__heading_position">финансовое</span><span class="section-finance__heading section-finance__heading_position">положение?</span></h2>
+                    <div class="section-finance__box-card">
+                      <div class="card-merit">
+                        <div class="card-merit__box-content-top">
+                          <figure class="card-merit__figure"><img class="card-merit__picture" src="../img/question.png" alt="question"></figure>
+                        </div>
+                        <div class="card-merit__box-content-bottom">
+                          <p class="card-merit__txt">За последний год работы мы уже помогли<span class="card-merit__txt card-merit__txt_bold"> более, чем 150 клиентам</span> выйти из трудной ситуации!</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="grid__item width-1-1 width-1-2-lg">
+                  <div class="section-finance__box-form">
+                    <form class="form-feedback" action="/" method="POST">
+                      <div class="form-feedback__header"><span class="form-feedback__title">Получите бесплатно пошаговую инструкцию </span><span class="form-feedback__subtitle">по процедуре банкротства прямо сейчас:</span></div>
+                      <div class="form-feedback__group">
+                        <div class="form-feedback__box-field">
+                          <input class="form-feedback__field" id="fieldPhone" type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20">
+                        </div>
+                        <div class="form-feedback__box-button">
+                          <input class="button button_middle button_font" type="submit" value="Получить инструкцию">
+                        </div>
+                      </div>
+                      <div class="form-feedback__footer">
+                        <div class="form-feedback__box-inform"><span class="form-feedback__txt-inform">Мы перезвоним в течение 5 минут</span></div>
+                        <div class="form-feedback__group">
+                          <div class="form-feedback__box-checkbox">
+                            <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="#" target="_blank">обработкой персональных данных</a></span>
+                          </div>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div class="section-finance__box-figure">
+                <figure class="section-finance__figure wow slideInLeft" data-wow-offset="200"><img class="section-finance__picture" src="../img/pig.png" alt="pig"></figure>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
     </div>
     <script src="libs/libs-min.js"></script>
     <script src="js/common-min.js"></script>
