modified sections and ready modal window

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,34 @@
                 </div>
               </div>
             </div>
-            <div class="header__modal"></div>
+            <div class="header__modal">
+              <div class="modal" id="modalWindow">
+                <div class="modal__box-button">
+                  <button class="button-close" id="btnCloseModal"></button>
+                </div>
+                <div class="modal__box-content">
+                  <form class="form-feedback" action="/" method="POST">
+                    <div class="form-feedback__header"><span class="form-feedback__title">Мы свяжется с вами </span><span class="form-feedback__subtitle">чтобы обговорить финансовые проблемы</span></div>
+                    <div class="form-feedback__group">
+                      <div class="form-feedback__box-field">
+                        <input class="form-feedback__field" id="fieldPhone" type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20">
+                      </div>
+                      <div class="form-feedback__box-button">
+                        <input class="button button_middle button_font" type="submit" value="Перезвоните мне">
+                      </div>
+                    </div>
+                    <div class="form-feedback__footer">
+                      <div class="form-feedback__box-inform"><span class="form-feedback__txt-inform">Мы перезвоним в течение 5 минут</span></div>
+                      <div class="form-feedback__group">
+                        <div class="form-feedback__box-checkbox">
+                          <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="#" target="_blank">обработкой персональных данных</a></span>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </header>
