--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
                     <div class="form-feedback__header"><span class="form-feedback__title">Мы свяжется с вами </span><span class="form-feedback__subtitle">чтобы обговорить финансовые проблемы</span></div>
                     <div class="form-feedback__group">
                       <div class="form-feedback__box-field">
-                        <input class="form-feedback__field" id="fieldPhone" type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20">
+                        <input class="form-feedback__field" type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20">
                       </div>
                       <div class="form-feedback__box-button">
                         <input class="button button_middle button_font" type="submit" value="Перезвоните мне">
@@ -96,7 +96,7 @@
                           <div class="slider-hero__content">
                             <div class="slider-hero__content-top"><span class="slider-hero__txt slider-hero__txt_position">Самые лучшие</span><span class="slider-hero__txt">эксперты!</span></div>
                             <div class="slider-hero__content-bottom">
-                              <div class="slider-hero__box-button"><a class="button button_middle" href="#"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
+                              <div class="slider-hero__box-button"><a class="button button_middle" href="#" tabindex="-1"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
                             </div>
                           </div>
                         </div>
@@ -104,7 +104,7 @@
                           <div class="slider-hero__content">
                             <div class="slider-hero__content-top"><span class="slider-hero__txt slider-hero__txt_position">Помощь с</span><span class="slider-hero__txt">документами!</span></div>
                             <div class="slider-hero__content-bottom">
-                              <div class="slider-hero__box-button"><a class="button button_middle" href="#"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
+                              <div class="slider-hero__box-button"><a class="button button_middle" href="#" tabindex="-1"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
                             </div>
                           </div>
                         </div>
@@ -112,7 +112,7 @@
                           <div class="slider-hero__content">
                             <div class="slider-hero__content-top"><span class="slider-hero__txt slider-hero__txt_position">Избавьтесь от долгов</span><span class="slider-hero__txt">совершенно легально!</span></div>
                             <div class="slider-hero__content-bottom">
-                              <div class="slider-hero__box-button"><a class="button button_middle" href="#"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
+                              <div class="slider-hero__box-button"><a class="button button_middle" href="#" tabindex="-1"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
                             </div>
                           </div>
                         </div>
@@ -163,7 +163,7 @@
                       <div class="form-feedback__header"><span class="form-feedback__title">Получите бесплатно пошаговую инструкцию </span><span class="form-feedback__subtitle">по процедуре банкротства прямо сейчас:</span></div>
                       <div class="form-feedback__group">
                         <div class="form-feedback__box-field">
-                          <input class="form-feedback__field" id="fieldPhone" type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20">
+                          <input class="form-feedback__field" type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20">
                         </div>
                         <div class="form-feedback__box-button">
                           <input class="button button_middle button_font" type="submit" value="Получить инструкцию">
