section procedure is ready

--- a/app/index.html
+++ b/app/index.html
@@ -187,6 +187,59 @@
             </div>
           </div>
         </section>
+        <section class="section section-procedure">
+          <div class="container">
+            <div class="section-procedure__box-content">
+              <div class="section-procedure__box-content-top">
+                <h2 class="section-procedure__heading">Сложная процедура банкротства?</h2><span class="section-procedure__subheading">С нами это легко!</span>
+              </div>
+              <div class="section-procedure__box-card">
+                <div class="grid">
+                  <div class="grid__item width-1-1 width-1-2-lg">
+                    <div class="card-info card-info_inner-position_right card-info_inner-position_special-align">
+                      <div class="card-info__box-content-top">
+                        <figure class="card-info__figure wow rotateIn" data-wow-offset="10"><img class="card-info__picture" src="../img/portrait.png" alt="portrait"></figure>
+                      </div>
+                      <div class="card-info__box-content-bottom">
+                        <p class="card-info__txt">С вами работает&nbsp;<span class="card-info__txt card-info__txt_bold">персональный менеджер по банкротству,&nbsp;</span>который постоянно в курсе этапов вашего дела.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="grid__item width-1-1 width-1-2-lg">
+                    <div class="card-info card-info_inner-position_left card-info_inner-position_top">
+                      <div class="card-info__box-content-top">
+                        <figure class="card-info__figure card-info__figure_outer-position_bottom wow rotateIn" data-wow-offset="10"><img class="card-info__picture" src="../img/packs.png" alt="packs"></figure>
+                      </div>
+                      <div class="card-info__box-content-bottom card-info__box-content-bottom_inner-position_top card-info__box-content-bottom_outer-position_top">
+                        <p class="card-info__txt">Соберем весь пакет документов.&nbsp;<span class="card-info__txt card-info__txt_bold card-info__txt_md-inner-position">С нами вы не тратите время и&nbsp;нервы!</span></p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="grid__item width-1-1 width-1-2-lg">
+                    <div class="card-info card-info_inner-position_right card-info_outer-position_top-deep">
+                      <div class="card-info__box-content-top">
+                        <figure class="card-info__figure wow rotateIn" data-wow-offset="10"><img class="card-info__picture" src="../img/docs.png" alt="docs"></figure>
+                      </div>
+                      <div class="card-info__box-content-bottom card-info__box-content-bottom_outer-position_top">
+                        <p class="card-info__txt">Все гарантии мы&nbsp;<span class="card-info__txt card-info__txt_bold card-info__txt_inner-position">прописываем в&nbsp;договоре!</span></p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="grid__item width-1-1 width-1-2-lg">
+                    <div class="card-info card-info_inner-position_left card-info_outer-position_top-small">
+                      <div class="card-info__box-content-top">
+                        <figure class="card-info__figure card-info__figure_outer-position_bottom card-info__figure_inner-position_left wow rotateIn" data-wow-offset="5"><img class="card-info__picture" src="../img/people.png" alt="people"></figure>
+                      </div>
+                      <div class="card-info__box-content-bottom card-info__box-content-bottom_inner-position_top card-info__box-content-bottom_outer-position_left">
+                        <p class="card-info__txt">3 опытных финансовых управляющих&nbsp;в&nbsp;команде!&nbsp;<span class="card-info__txt card-info__txt_bold card-info__txt_xl-inner-position">Ваше дело в надежных руках!</span></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
     <script src="libs/libs-min.js"></script>
