--- a/app/index.html
+++ b/app/index.html
@@ -240,6 +240,39 @@
             </div>
           </div>
         </section>
+        <section class="section section-cost">
+          <div class="container">
+            <div class="section-cost__box-content">
+              <div class="section-cost__box-content-top">
+                <h2 class="section-cost__heading">Как узнать стоимость услуг?</h2>
+              </div>
+              <div class="section-cost__box-form">
+                <form class="form-feedback" action="/" method="POST">
+                  <div class="form-feedback__header"><span class="form-feedback__title">Наш консультант свяжется с вами и бесплатно проанализирует</span><span class="form-feedback__subtitle">ваш долговой портфель, чтобы определить цену услуг</span></div>
+                  <div class="form-feedback__group">
+                    <div class="form-feedback__box-field">
+                      <input class="form-feedback__field" type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20">
+                    </div>
+                    <div class="form-feedback__box-button">
+                      <input class="button button_middle button_font" type="submit" value="Получить инструкцию">
+                    </div>
+                  </div>
+                  <div class="form-feedback__footer">
+                    <div class="form-feedback__box-inform"><span class="form-feedback__txt-inform">Мы перезвоним в течение 5 минут</span></div>
+                    <div class="form-feedback__group">
+                      <div class="form-feedback__box-checkbox">
+                        <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="#" target="_blank">обработкой персональных данных</a></span>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="section-cost__box-figure wow slideInRight" data-wow-offset="250">
+                <figure class="section-cost__figure"><img class="section-cost__picture" src="../img/femida.png" alt="femida"></figure>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
     <script src="libs/libs-min.js"></script>
