serve section is ready and cards feature

--- a/app/index.html
+++ b/app/index.html
@@ -273,6 +273,52 @@
             </div>
           </div>
         </section>
+        <section class="section section-serve">
+          <div class="container">
+            <div class="section-serve__box-content-top">
+              <h2 class="section-serve__heading">Удобно ли с нами работать?</h2>
+            </div>
+            <div class="section-serve__box-card">
+              <div class="grid">
+                <div class="grid__item width-1-1 width-1-3-lg">
+                  <div class="card-feature">
+                    <div class="card-feature__box-content-top">
+                      <figure class="card-feature__figure"><img class="card-feature__picture" src="../img/calendar.png" alt="calendar"></figure>
+                    </div>
+                    <div class="card-feature__box-content-bottom card-feature__box-content-bottom_inner-position_left-small">
+                      <p class="card-feature__title">Рассрочка до 12 месяцев</p>
+                      <p class="card-feature__txt">
+                        Наши клиенты зачастую находятся в сложном&nbsp;финансовом положении, поэтому унас существует гибкая система оплаты</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="grid__item width-1-1 width-1-3-lg">
+                  <div class="card-feature">
+                    <div class="card-feature__box-content-top card-feature__box-content-top_outer-position_left-small">
+                      <figure class="card-feature__figure"><img class="card-feature__picture" src="../img/plane.png" alt="plane"></figure>
+                    </div>
+                    <div class="card-feature__box-content-bottom card-feature__box-content-bottom_outer-position_left-small">
+                      <p class="card-feature__title">Работаем в выходные</p>
+                      <p class="card-feature__txt">
+                        У вас плотный график?  - Не беда! Наш офис работает по выходным для&nbsp;большего удобства&nbsp;клиентов</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="grid__item width-1-1 width-1-3-lg">
+                  <div class="card-feature">
+                    <div class="card-feature__box-content-top card-feature__box-content-top_outer-position_left-deep">
+                      <figure class="card-feature__figure"><img class="card-feature__picture" src="../img/result.png" alt="result"></figure>
+                    </div>
+                    <div class="card-feature__box-content-bottom card-feature__box-content-bottom_outer-position_left-deep">
+                      <p class="card-feature__title">Оплата по результату</p>
+                      <p class="card-feature__txt"> Окончательная оплата происходит по завершению процедуры банкротства&nbsp;</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
     <script src="libs/libs-min.js"></script>
