Fixed some sections. Section Step is ready

--- a/app/index.html
+++ b/app/index.html
@@ -319,6 +319,139 @@
             </div>
           </div>
         </section>
+        <section class="section section-step">
+          <div class="container">
+            <div class="section-step__wrap">
+              <div class="section-step__box-figure">
+                <figure class="section-step__figure wow slideInLeft" data-wow-offset="350"><img class="section-step__picture" src="../img/book.png" alt="book"></figure>
+              </div>
+            </div>
+            <div class="section-step__box-text">
+              <h2 class="section-step__heading">Сколько длится процедура банкротства?</h2><span class="section-step__subheading">В среднем, процедура банкротства&nbsp;<span class="section-step__subheading_position">длится от 6 до 12 месяцев</span></span>
+            </div>
+            <div class="section-step__box-infographics">
+              <div class="grid">
+                <div class="grid__item width-1-2 width-1-4-lg">
+                  <div class="card-infographics card-infographics_outer-position_right card-infographics_outer-position_lower">
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_1"><img class="card-infographics__picture" src="../img/infographic-search-doc.png" alt="search doc"></figure>
+                  </div>
+                </div>
+                <div class="grid__item width-1-2 width-1-4-lg">
+                  <div class="card-infographics card-infographics_outer-position_left card-infographics_outer-position_lower">
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_2"><img class="card-infographics__picture" src="../img/infographic-doc.png" alt="doc"></figure>
+                  </div>
+                </div>
+                <div class="grid__item width-1-2 width-1-4-lg">
+                  <div class="card-infographics card-infographics_outer-position_right card-infographics_outer-position_lower">
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_3 card-infographics__figure_size_small"><img class="card-infographics__picture" src="../img/infographic-libra.png" alt="libra"></figure>
+                  </div>
+                </div>
+                <div class="grid__item width-1-2 width-1-4-lg">
+                  <div class="card-infographics card-infographics_outer-position_left card-infographics_outer-position_lower">
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_4"><img class="card-infographics__picture" src="../img/infographic-book.png" alt="book"></figure>
+                  </div>
+                </div>
+                <div class="grid__item width-1-2 width-1-4-lg">
+                  <div class="card-infographics card-infographics_outer-position_right">
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_5 card-infographics__figure_size_medium"><img class="card-infographics__picture" src="../img/infographic-man.png" alt="man"></figure>
+                  </div>
+                </div>
+                <div class="grid__item width-1-2 width-1-4-lg">
+                  <div class="card-infographics card-infographics_outer-position_left">
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_6"><img class="card-infographics__picture" src="../img/infographic-calc.png" alt="calc"></figure>
+                  </div>
+                </div>
+                <div class="grid__item width-1-2 width-1-4-lg">
+                  <div class="card-infographics card-infographics_outer-position_right">
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_7 card-infographics__figure_size_medium"><img class="card-infographics__picture" src="../img/infographic-money.png" alt="money"></figure>
+                  </div>
+                </div>
+                <div class="grid__item width-1-2 width-1-4-lg">
+                  <div class="card-infographics card-infographics_outer-position_left">
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_8"><img class="card-infographics__picture" src="../img/infographic-result.png" alt="result"></figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="section-step__slider-step">
+              <div class="slider-step">
+                <div class="swiper-container" id="swiperContainerSliderStep">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide slider-step__slide">
+                      <div class="slider-step__content">
+                        <div class="slider-step__box-text"><span class="slider-step__title">Подготовка и сбор документов</span><span class="slider-step__txt">Мы соберем и подготовим комплект документов более чем из 17 позиций.&nbsp;<span class="slider-step__txt_position">  Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места,&nbsp;</span><span class="slider-step__txt_position">мы сделаем это за вас!</span></span></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide slider-step__slide">
+                      <div class="slider-step__content">
+                        <div class="slider-step__box-text"><span class="slider-step__title">Поможем составить заявления</span><span class="slider-step__txt">
+                            Мы накопили обширный опыт и сможем грамотно про анализировать документы.&nbsp;На основе этих документов и проведенного анализа,
+                            поможем с Заявлением о признании банкротом.</span></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide slider-step__slide">
+                      <div class="slider-step__content">
+                        <div class="slider-step__box-text"><span class="slider-step__title">Подача документов в&nbsp;суд</span><span class="slider-step__txt">
+                            Сделаем чтобы суд принял заявление в течении трех&nbsp;дней.&nbsp;После чего состоится первое заседание.
+                            На нём будет рассмотрение заявление, и назначен арбитражный управляющий.</span></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide slider-step__slide">
+                      <div class="slider-step__content">
+                        <div class="slider-step__box-text"><span class="slider-step__title">Назначение управляющего</span><span class="slider-step__txt">
+                            Постараемся чтобы быстро назначали финансового управляющего.&nbsp;Поможем вам направить документы в СРО. Проведём нужные переговоры с СРО.
+                            Составим план дальнейших действий.</span></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide slider-step__slide">
+                      <div class="slider-step__content">
+                        <div class="slider-step__box-text"><span class="slider-step__title">Реструктуризация долгов</span><span class="slider-step__txt">
+                            Наши юристы помогут составить план реструктуризации.&nbsp;Подготовим должника к собранию кредиторов, дадим  необходимые инструкции.
+                            Назначим куратора собрания кредиторов.</span></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide slider-step__slide">
+                      <div class="slider-step__content">
+                        <div class="slider-step__box-text"><span class="slider-step__title">Переговоры с кредиторами</span><span class="slider-step__txt">
+                            На собрании кредиторов проведём переговоры.&nbsp;Представим кредиторам обширный план реструктуризации долгов.
+                            Также представим кредиторам отчёт финансового анализа долгов.</span></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide slider-step__slide">
+                      <div class="slider-step__content">
+                        <div class="slider-step__box-text"><span class="slider-step__title">Быстрая реализация имущества</span><span class="slider-step__txt">
+                            Походатайствуем чтобы реализация имущества правилась быстро.&nbsp;Будем поддерживать контакт с кредиторами.
+                            Смотреть чтобы все придерживались плану реструктуризации долгов.</span></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide slider-step__slide">
+                      <div class="slider-step__content">
+                        <div class="slider-step__box-text"><span class="slider-step__title">Признание должника банкротом</span><span class="slider-step__txt">
+                            Проконтролируем процесс погашения требования кредиторов. &nbsp;Проведем юридически грамотное списание долгов.
+                            Добьемся быстрого заключения, признание должника банкротом.</span></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-step__control-panel">
+                  <div class="button-arrow button-arrow_slim icon-arrow-right slider-step-button-next"></div>
+                  <div class="button-arrow button-arrow_slim icon-arrow-left slider-step-button-prev"></div>
+                </div>
+                <div class="slider-step__box-pagination">
+                  <div class="slider-step__pagination"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
     <script src="libs/libs-min.js"></script>
